Styling and lint